force-app/main/default/objects/copadovsm__Value_Stream_Map_Metric__c/copadovsm__Value_Stream_Map_Metric__c.object-meta.xml
<CustomObject>
    <label>Value Stream Map Metric</label>
    <nameField>
        <label>Value Stream Map Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Stream Map Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>