force-app/main/default/objects/copadovsm__Value_Stream_Map_Metric__c/fields/copadovsm__Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Calculation_Method__c</fullName>
    <label>Calculation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sum</fullName>
            </value>
            <value>
                <fullName>Avg</fullName>
                <label>Average</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>