force-app/main/default/objects/copadovsm__Value_Stream_Map_Metric__c/fields/copadovsm__Field_Api__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Field_Api__c</fullName>
    <label>Field Api</label>
    <length>80</length>
    <type>Text</type>
</CustomField>