force-app/main/default/objects/copadovsm__Value_Stream_Map_Metric__c/fields/copadovsm__Order__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Order__c</fullName>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>