force-app/main/default/objects/copadovsm__Value_Stream_Map_Metric__c/fields/copadovsm__Value_Stream_Map__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Value_Stream_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Value Stream Map</label>
    <referenceTo>copadovsm__Value_Stream_Map__c</referenceTo>
    <relationshipLabel>Value Stream Map Metrics</relationshipLabel>
    <relationshipName>Value_Stream_Map_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>